<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context=".HomeActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" android:id="@+id/linearLayout1">
    
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" >
	        
			<EditText
			    android:id="@+id/home_search_box"
			    android:layout_width="match_parent"
			    android:layout_height="match_parent"
				android:hint="@string/home_search_hint"
				android:drawableRight="@drawable/ic_action_search"
	            android:drawablePadding="4dp" />
	        
	    </LinearLayout>
    
        <Button
            android:id="@+id/button_show_list"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/button_show_list" />
		
        <Button
            android:id="@+id/button_show_map"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/button_show_map" />        
        
        <Button
            android:id="@+id/button_bookmarks"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/button_bookmarks" />

        <Button
            android:id="@+id/button_know_rules"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/button_know_rules" />
        
        <Button
            android:id="@+id/button_how_high"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/button_how_high" />
        
        <Button
            android:id="@+id/button_about"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/button_about" />

	    <TextView
	        android:id="@+id/textView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/all_rights"
	        android:gravity="center"
	        android:paddingTop="20dp"/>

    </LinearLayout>

</RelativeLayout>